[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "LegacyMBPol"
authors = [
    {name = "Mark Boyer", email = "maboyer@tamu.edu"},
]
description = "A legacy version of MB-Pol"
readme = "README.md"
requires-python = ">=3.8"
keywords = []
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mccoygroup-mcutils",
]
dynamic = ["version"]